@@ -82,6 +82,8 @@ Please visit http://aegisub.net to download latest version
   o Added support for reading ASS, SSA and SRT softsubs directly from Matroska files. (AMZ)
   o Fixed loading of SRT and TXT files, which were causing an empty line to appear at the start of the file. (AMZ)
   o Added support for reading v4.00++ (ASS2) files. (AMZ)
+  o Added very basic reading support for MPEG-4 Streaming Text (TTXT) subtitles. (AMZ)
+  o Added full read-write support for MicroDVD subtitles. (AMZ)
 - Changes to main menu:
   o There are now new options, and most were moved around to have better organization. (AMZ/jfs)
   o General tweaks changes, such as better icons, and fixing of flickering and slowness. (AMZ)
